--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,18 +4,18 @@ services:
     fastdfs:
         build: .
         image: liuhui/fastdfs
-        # ¸ÃÈİÆ÷ÊÇ·ñĞèÒª¿ª»úÆô¶¯+×Ô¶¯ÖØÆô¡£ÈôĞèÒª£¬ÔòÈ¡Ïû×¢ÊÍ¡£
-        #restart: always
+        # è¯¥å®¹å™¨æ˜¯å¦éœ€è¦å¼€æœºå¯åŠ¨+è‡ªåŠ¨é‡å¯ã€‚è‹¥éœ€è¦ï¼Œåˆ™å–æ¶ˆæ³¨é‡Šã€‚
+        restart: always
         container_name: fastdfs
         environment:
-            # nginx·şÎñ¶Ë¿Ú
+            # nginxæœåŠ¡ç«¯å£
             - WEB_PORT=8888
-            # dockerËùÔÚÖ÷»úµÄIPµØÖ·
+            # dockeræ‰€åœ¨ä¸»æœºçš„IPåœ°å€
             - IP=192.168.0.50
         volumes:
-            # ½«±¾µØÄ¿Â¼Ó³Éäµ½dockerÈİÆ÷ÄÚµÄfastdfsÊı¾İ´æ´¢Ä¿Â¼£¬½«fastdfsÎÄ¼ş´æ´¢µ½Ö÷»úÉÏ£¬ÒÔÃâÃ¿´ÎÖØ½¨dockerÈİÆ÷£¬Ö®Ç°´æ´¢µÄÎÄ¼ş¾Í¶ªÊ§ÁË¡£
+            # å°†æœ¬åœ°ç›®å½•æ˜ å°„åˆ°dockerå®¹å™¨å†…çš„fastdfsæ•°æ®å­˜å‚¨ç›®å½•ï¼Œå°†fastdfsæ–‡ä»¶å­˜å‚¨åˆ°ä¸»æœºä¸Šï¼Œä»¥å…æ¯æ¬¡é‡å»ºdockerå®¹å™¨ï¼Œä¹‹å‰å­˜å‚¨çš„æ–‡ä»¶å°±ä¸¢å¤±äº†ã€‚
             - /home/volumes/fastdfs:/var/local/fdfs
-        # Ê¹docker¾ßÓĞrootÈ¨ÏŞÒÔ¶ÁĞ´Ö÷»úÉÏµÄÄ¿Â¼
+        # ä½¿dockerå…·æœ‰rootæƒé™ä»¥è¯»å†™ä¸»æœºä¸Šçš„ç›®å½•
         privileged: true
-        # ÍøÂçÄ£Ê½Îªhost£¬¼´Ö±½ÓÊ¹ÓÃÖ÷»úµÄÍøÂç½Ó¿Ú
+        # ç½‘ç»œæ¨¡å¼ä¸ºhostï¼Œå³ç›´æ¥ä½¿ç”¨ä¸»æœºçš„ç½‘ç»œæ¥å£
         network_mode: "host"
